fix: Update text alignment and styling in PDF templates for better layout

--- a/public/assets/css/pdfPO.css
+++ b/public/assets/css/pdfPO.css
@@ -54,7 +54,7 @@ body {
 }
 .header-text {
     overflow: hidden;
-    text-align: center;
+    text-align: start;
 }
 .judul-dokumen {
     text-align: center;
